# inspertorchaudio

./: .env_template  .gitignore  README.md  pyproject.toml
docs/: datasets.md  tasks.md
sandbox/: download_fma_small.py  download_xenocanto.py  fma_small_traintest_demo.ipynb  train_fma_small.py
src/inspertorchaudio/: __init__.py  app.py  processing.py
src/inspertorchaudio/data/: audio_dataset.py  dataloader.py  fma_dataset.py  utils.py
src/inspertorchaudio/data/datasets/: audio_dataset.py  fma_dataset.py  utils.py
src/inspertorchaudio/data/downloaders/: download_fma.py  utils.py
src/inspertorchaudio/experiments/: supervised_train_test.py
src/inspertorchaudio/learning/: supervised.py
src/inspertorchaudio/models/: dieleman2014.py
src/inspertorchaudio/resources/: datasets.toml
tests/: test_environment.py
tests/inspertorchaudio/data/: test_audio_dataset.py  test_dataloader.py  test_downloaders.py  test_fma_dataset.py  test_utils.py
tests/inspertorchaudio/learning/: test_supervised.py
tests/inspertorchaudio/models/: test_dieleman.py
